--- a/src/Css/App.css
+++ b/src/Css/App.css
@@ -20,10 +20,14 @@
 .navbar-2 {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   width: 1000px;
   height: 32px;
+  scroll-snap-type: mandatory;
+  background-image: linear-gradient(90deg, #005b9e, #0082c6);
 }
 .navbar-2__item {
   color: #ced4da;
   text-transform: uppercase;
+  scroll-snap-align: start;
 }
