--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -2,6 +2,7 @@
   color: gray;
   background: #222222;
   min-height: 100vh;
+  //   width: 100vw;
   //   display: flex;
   //   flex-direction: column;
   //   align-items: center;
@@ -17,6 +18,7 @@
   color: white;
   height: 50px;
   padding: 0 10px;
+  //   width: 100vw;
   &__item {
     // color: gray;
     font-size: 24px;
@@ -26,11 +28,17 @@
 .navbar-2 {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   width: 1000px;
   height: 32px;
+  //   overflow-x: hidden;
+  scroll-snap-type: mandatory;
+  background-image: linear-gradient(90deg, #005b9e, #0082c6);
+  //   display: block;
   &__item {
     color: #ced4da;
     text-transform: uppercase;
+    scroll-snap-align: start;
     // text-align: center;
   }
 }
