--- a/src/Css/App.css
+++ b/src/Css/App.css
@@ -1,7 +1,9 @@
-.App {
+.container {
   color: gray;
   background: #222222;
   min-height: 100vh;
+  width: 100%;
+  position: absolute;
 }
 
 .navbar {
@@ -12,6 +14,7 @@
   color: white;
   height: 50px;
   padding: 0 10px;
+  position: relative;
 }
 .navbar__item {
   font-size: 24px;
@@ -21,13 +24,15 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 1000px;
   height: 32px;
-  scroll-snap-type: mandatory;
+  overflow: auto;
+  white-space: nowrap;
   background-image: linear-gradient(90deg, #005b9e, #0082c6);
 }
 .navbar-2__item {
+  display: inline-block;
   color: #ced4da;
   text-transform: uppercase;
-  scroll-snap-align: start;
+  cursor: pointer;
+  padding: 14px;
 }
