--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -1,7 +1,9 @@
-.App {
+.container {
   color: gray;
   background: #222222;
   min-height: 100vh;
+  width: 100%;
+  position: absolute;
   //   width: 100vw;
   //   display: flex;
   //   flex-direction: column;
@@ -18,7 +20,8 @@
   color: white;
   height: 50px;
   padding: 0 10px;
-  //   width: 100vw;
+  // width: 100%;
+  position: relative;
   &__item {
     // color: gray;
     font-size: 24px;
@@ -29,16 +32,20 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 1000px;
+  // width: 1000px;
   height: 32px;
-  //   overflow-x: hidden;
-  scroll-snap-type: mandatory;
+  overflow: auto;
+  white-space: nowrap;
+  // scroll-snap-type: mandatory;
   background-image: linear-gradient(90deg, #005b9e, #0082c6);
   //   display: block;
   &__item {
+    display: inline-block;
     color: #ced4da;
     text-transform: uppercase;
-    scroll-snap-align: start;
+    // scroll-snap-align: start;
+    cursor: pointer;
+    padding: 14px;
     // text-align: center;
   }
 }
